feat: add profile api
fix jwt version
